--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Toolbar Example</string>
-    <string name="video">Video</string>
-    <string name="music">Music</string>
+    <string name="person">Person</string>
+    <string name="search">Search</string>
     <string name="quit">Quit</string>
 </resources>
